manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-conf-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw-conf-app
  template:
    metadata:
      labels:
        app: hw-conf-app
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          resources:
            limits:
              memory: 200Mi
              cpu: 1
            requests:
              memory: 100Mi
              cpu: 100m
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-html
              mountPath: /usr/share/nginx/html
        - name: multitool
          image: wbitt/network-multitool:latest
          resources:
            limits:
              memory: 200Mi
              cpu: 1
            requests:
              memory: 100Mi
              cpu: 100m
          ports:
            - containerPort: 8080
      volumes:
        - name: nginx-html
          configMap:
            name: nginx-config
